# SeamForge

./: .gitignore  AGENTS.md  ALGORITHM_COMPARISON.md  ARCHITECTURE.md  CMakeLists.txt  CONTINUATION_GUIDE.md  DATA_MODELS.md  DECISION_LOG.md  KNOWN_LIMITATIONS.md  README.md  RESEARCH.md  ROADMAP.md  TEST_STRATEGY.md
data/meshes/: skirt_aline.gt.json  skirt_darts.gt.json  skirt_dense.gt.json  skirt_dense.seams.json  skirt_fourpanel.gt.json  skirt_fourpanel.seams.json  skirt_noisy.seams.json  trousers_flat.gt.json  trousers_flat.seams.json  tshirt_boxy.gt.json  tshirt_boxy.seams.json
experiments/: README.md  exp1_known_cut_flattening.sh  exp2_two_panel_skirt.sh  exp3_assisted_proposal.sh  exp4_auto_segmentation.sh  exp5_precut_matching.sh  exp6_resim_validation.sh  run_all.sh
src/app/: AppState.cpp  AppState.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  PatternView.cpp  PatternView.h  Viewport3D.cpp  Viewport3D.h  main.cpp
src/core/: CMakeLists.txt  Curvature.cpp  Curvature.h  Export.cpp  Export.h  Flatten.cpp  Flatten.h  Io.cpp  Io.h  Matching.cpp  Matching.h  Mesh.cpp  Mesh.h  Procedural.cpp  Procedural.h  Project.cpp  Project.h  Regularize.cpp  Regularize.h  Relations.cpp  Relations.h  Resimulate.cpp  Resimulate.h  Seam.cpp  Seam.h  Segmentation.cpp  Segmentation.h  SegmentationBaselines.cpp  SegmentationBaselines.h  Validation.cpp  Validation.h
src/tools/: CMakeLists.txt  make_test_meshes.cpp  seamforge_cli.cpp
tests/: CMakeLists.txt  test_bezier.cpp  test_dcharts.cpp  test_export_project.cpp  test_flatten.cpp  test_garments.cpp  test_matching.cpp  test_mesh.cpp  test_propose.cpp  test_regularize.cpp  test_relations.cpp  test_resim.cpp  test_segmentation.cpp  test_validation.cpp
